Fix header whitespace and text alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -70,6 +70,9 @@ body {
 }
 
 header.header {
+  margin: 0;
+  padding: 0;
+
   background-color: whitesmoke;
 
   .branding {
@@ -78,6 +81,8 @@ header.header {
 
       .brand {
         h1 {
+          margin: 0;
+
           img {
             height: 2em;
             width: 2em;
@@ -85,6 +90,7 @@ header.header {
           }
 
           .brand-text {
+            vertical-align: top;
             font-size: 1.5em;
             // font-family: "Cerebri Sans";
             font-family: "Averta";
